Bug 749482: Fix assertion in SetRemoteImageData. r=roc