gfx/layers/ImageLayers.cpp
@@ -266,8 +266,9 @@ void
 ImageContainer::SetRemoteImageData(RemoteImageData *aData, CrossProcessMutex *aMutex)
 {
   ReentrantMonitorAutoEnter mon(mReentrantMonitor);
-  NS_ASSERTION(!mActiveImage, "No active image expected when SetRemoteImageData is called.");
-  NS_ASSERTION(!mRemoteData, "No remote data expected when SetRemoteImageData is called.");
+
+  NS_ASSERTION(!mActiveImage || !aData, "No active image expected when SetRemoteImageData is called with non-NULL aData.");
+  NS_ASSERTION(!mRemoteData || !aData, "No remote data expected when SetRemoteImageData is called with non-NULL aData.");
 
   mRemoteData = aData;
 
